--- a/app/src/main/res/layout/content_publish_job.xml
+++ b/app/src/main/res/layout/content_publish_job.xml
@@ -81,34 +81,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <!--<EditText-->
-                    <!--android:id="@+id/edJobDescription"-->
-                    <!---->
-                    <!--android:gravity="top"-->
-                    <!--android:layout_gravity="bottom"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="@dimen/dp96"-->
-                    <!--android:scrollHorizontally="false"-->
-                    <!--android:hint="@string/prompt_job_description"-->
-                    <!--android:maxLength="@integer/char500" />-->
+                <!--android:id="@+id/edJobDescription"-->
+                <!---->
+                <!--android:gravity="top"-->
+                <!--android:layout_gravity="bottom"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/dp96"-->
+                <!--android:scrollHorizontally="false"-->
+                <!--android:hint="@string/prompt_job_description"-->
+                <!--android:maxLength="@integer/char500" />-->
 
                 <EditText
                     android:id="@+id/edJobDescription"
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
-                    android:gravity="top"
                     android:layout_weight="1"
                     android:background="@android:color/transparent"
+                    android:gravity="top"
                     android:hint="@string/prompt_job_description"
-                    android:inputType="textMultiLine"
-                    />
+                    android:inputType="textMultiLine" />
                 <!--<EditText-->
-                    <!--android:id="@+id/edJobDescription"-->
-                    <!--android:layout_width="match_parent"-->
-                    <!--android:layout_height="@dimen/dp96"-->
-                    <!--android:layout_weight="1"-->
-                    <!--android:background="@android:color/transparent"-->
-                    <!--android:hint="@string/prompt_job_description"-->
-                    <!--android:inputType="textMultiLine" />-->
+                <!--android:id="@+id/edJobDescription"-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="@dimen/dp96"-->
+                <!--android:layout_weight="1"-->
+                <!--android:background="@android:color/transparent"-->
+                <!--android:hint="@string/prompt_job_description"-->
+                <!--android:inputType="textMultiLine" />-->
             </android.support.design.widget.TextInputLayout>
 
             <View
@@ -121,20 +120,21 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/spacing_large"
-            android:layout_marginTop="@dimen/spacing_large"
+            android:layout_marginTop="@dimen/dp28"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvJobCity"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="top"
-                android:background="@android:color/transparent"
-                android:hint="@string/prompt_job_city"
-                android:singleLine="true"
-                android:textSize="@dimen/dp16" />
 
+                <TextView
+                    android:id="@+id/tvJobCity"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:background="@android:color/transparent"
+                    android:gravity="top"
+                    android:hint="@string/prompt_job_city"
+                    android:singleLine="true"
+                    android:textColor="@color/black_overlay"
+                    android:textSize="@dimen/sp16" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="2dp"
@@ -146,19 +146,19 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/spacing_large"
             android:orientation="vertical">
-        <!--<View-->
+            <!--<View-->
             <!--android:layout_width="match_parent"-->
             <!--android:layout_height="2dp"-->
             <!--android:background="@color/colorYellow" />-->
 
-        <Button
-            android:id="@+id/btPublishJob"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorYellow"
-            android:text="@string/submit"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:textColor="@color/grey_dark" />
+            <Button
+                android:id="@+id/btPublishJob"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/colorYellow"
+                android:text="@string/submit"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:textColor="@color/grey_dark" />
         </LinearLayout>
     </LinearLayout>
 </RelativeLayout>
