--- a/app/src/main/res/layout/item_job.xml
+++ b/app/src/main/res/layout/item_job.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -34,7 +34,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@string/save"
         android:id="@+id/btJobSave"
         android:layout_below="@+id/tvJobCity"
         android:layout_alignStart="@+id/tvJobCity" />
@@ -42,9 +42,9 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
+        android:text="@string/apply"
         android:id="@+id/btJobApply"
-        android:layout_alignBottom="@+id/btJobSave"
-        android:layout_centerHorizontal="true" />
+        android:layout_alignTop="@+id/btJobSave"
+        android:layout_toEndOf="@+id/btJobSave" />
 
 </RelativeLayout>
