--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,7 +10,10 @@
     <dimen name="dp8">8dp</dimen>
     <dimen name="dp10">10dp</dimen>
     <dimen name="dp16">16dp</dimen>
+    <dimen name="sp16">16sp</dimen>
+    <dimen name="dp18">18dp</dimen>
     <dimen name="dp24">24dp</dimen>
+    <dimen name="dp28">28dp</dimen>
     <dimen name="dp40">40dp</dimen>
     <dimen name="dp48">48dp</dimen>
     <dimen name="text_micro">12sp</dimen>
