--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,6 +6,7 @@
     <!--<dimen name="nav_header_vertical_spacing">16dp</dimen>-->
     <!--<dimen name="nav_header_height">160dp</dimen>-->
     <!--<dimen name="fab_margin">16dp</dimen>-->
+    <dimen name="dp2">2dp</dimen>
     <dimen name="dp4">4dp</dimen>
     <dimen name="dp8">8dp</dimen>
     <dimen name="dp10">10dp</dimen>
