--- a/app/src/main/res/layout/activity_job_status.xml
+++ b/app/src/main/res/layout/activity_job_status.xml
@@ -8,5 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.tam.joblinks.activities.JobStatusActivity">
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="job111"/>
 </RelativeLayout>
